--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
     
             <div class="logo-name">
-                <p>SOCHIN</p>
+                <p>TAZRO</p>
             </div>
     
             <div class="option2">
